--- a/templates/app/link.html
+++ b/templates/app/link.html
@@ -17,7 +17,7 @@
                   <br>
                   <h4 style="color: red">{{message}}</h4>
                   <div class="form-group">
-                    <label class="sr-only" name="brand">Member Name:</label>
+                    <label  name="brand">Member Name:</label>
                     <select class="form-control" required>
                           <option>1</option>
                           <option>2</option>
@@ -25,12 +25,12 @@
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Description:</label>
+                    <label >Description:</label>
                     <input type="text" class="form-control" name="description" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Link:</label>
+                    <label >Link:</label>
                     <input type="text" class="form-control" name="link" required>
                   </div>
 
