--- a/templates/app/standard.html
+++ b/templates/app/standard.html
@@ -18,25 +18,25 @@
                   <h4 style="color: red">{{message}}</h4>
 
                   <div class="form-group">
-                    <label class="sr-only">Standard Name:</label>
+                    <label >Standard Name:</label>
                     <input type="text" class="form-control" name="standardName" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Version:</label>
+                    <label >Version:</label>
                     <input type="text" class="form-control" name="version" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">ICC:</label>
+                    <label >ICC:</label>
                     <input type="text" class="form-control" name="icc" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only" >Active:</label>
+                    <label>Active:</label>
                     <select class="form-control" name="active" required>
-                          <option value="True">Active<option>
-                          <option value="False">Inactive<option>
+                          <option value="True">Active</option>
+                          <option value="False">Inactive</option>
                     </select>
                   </div>
 
