--- a/templates/app/bookmark.html
+++ b/templates/app/bookmark.html
@@ -19,7 +19,7 @@
 
 
                   <div class="form-group">
-                    <label class="sr-only" name="category">Category Name:</label>
+                    <label  name="category">Category Name:</label>
                     <select  class="form-control" required>
                       <option>1</option>
                       <option>2</option>
@@ -27,22 +27,22 @@
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Bookmark Name:</label>
+                    <label >Bookmark Name:</label>
                     <input type="text" class="form-control" name="bookmarkName" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Description:</label>
+                    <label >Description:</label>
                     <input type="text" class="form-control" name="description" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Start Date:</label>
+                    <label >Start Date:</label>
                     <input type="date" class="form-control" name="startDate" value="2000-12-30" placeholder="DOB(dd/mm/yyyy)" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">End Date:</label>
+                    <label >End Date:</label>
                     <input type="date" class="form-control" name="endDate" value="2000-12-30" placeholder="DOB(dd/mm/yyyy)" required>
                   </div>
                   <button type="submit" class="btn btn-default">Create Bookmark</button>
