--- a/templates/app/division.html
+++ b/templates/app/division.html
@@ -18,7 +18,7 @@
                   <h4 style="color: red">{{message}}</h4>
 
                   <div class="form-group">
-                    <label class="sr-only" >Member Name:</label>
+                    <label  >Member Name:</label>
                     <select name="member" class="form-control">
                       {%for each in members %}
                         <option value={{each.pk}}>{{each.name}}</option>
@@ -27,23 +27,23 @@
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Division Name:</label>
+                    <label >Division Name:</label>
                     <input type="text" class="form-control" name="name" required>
                   </div>
                   <div class="form-group">
-                    <label class="sr-only">Address:</label>
+                    <label >Address:</label>
                     <input type="text" class="form-control" name="address" required></input type="text">
                   </div>
                   <div class="form-group">
-                    <label class="sr-only">City:</label>
+                    <label >City:</label>
                     <input type="text" class="form-control" name="city" required></input type="text">
                   </div>
                   <div class="form-group">
-                    <label class="sr-only">State:</label>
+                    <label >State:</label>
                     <input type="text" class="form-control" name="state" required></input type="text">
                   </div>
                   <div class="form-group">
-                    <label class="sr-only">Country:</label>
+                    <label >Country:</label>
                     <select name="country" class="form-control">
                       {%for each in countries %}
                         <option value={{each.0}}>{{each.1}}</option>
@@ -51,7 +51,7 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <label class="sr-only">ZIP:</label>
+                    <label >ZIP:</label>
                     <input type="text" class="form-control" name="zip" required></input type="text">
                   </div>
 
