--- a/templates/app/patchStandard.html
+++ b/templates/app/patchStandard.html
@@ -17,35 +17,42 @@
                   <br>
                   <h4 style="color: red">{{message}}</h4>
                   <div class="form-group">
-                    <label class="sr-only" name="brand">Brand Name:</label>
-                    <select class="form-control" required>
-                          <option>1</option>
-                          <option>2</option>
+                    <label  >Brand Name:</label>
+                    <select name="brand" class="form-control" required>
+                      {%for each in brands %}
+                        <option value={{each.pk}}>{{each.name}}</option>
+                      {% endfor %}
                     </select>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only" name="standard">Standard Name:</label>
-                    <select class="form-control" required>
-                          <option>1</option>
-                          <option>2</option>
+                    <label>Standard Name:</label>
+                    <select name="standard" class="form-control" required>
+                      {%for each in standards %}
+                        <option value={{each.pk}}>{{each.name}}</option>
+                      {% endfor %}
                     </select>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Version:</label>
+                    <label >Version:</label>
                     <input type="text" class="form-control" name="version" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Name:</label>
+                    <label >Name:</label>
                     <input type="text" class="form-control" name="name" required>
+                  </div>
+
+                  <div class="form-group">
+                    <label >Patch:</label>
+                    <input type="text" class="form-control" name="patch" required>
                   </div>
 
                   {% for i in range36 %}
 
                   <div class="form-group">
-                    <label class="sr-only">Spectral {{i}}:</label>
+                    <label >Spectral {{i}}:</label>
                     <input type="text" class="form-control" name="spectral{{i}}" required>
                   </div>
 
@@ -54,57 +61,62 @@
                   {% for i in labRange %}
 
                   <div class="form-group">
-                    <label class="sr-only">Lab {{i}}:</label>
+                    <label >Lab {{i}}:</label>
                     <input type="text" class="form-control" name="lab{{i}}" required>
                   </div>
 
                   {% endfor %}
 
                   <div class="form-group">
-                    <label class="sr-only">Density:</label>
+                    <label >Density:</label>
                     <input type="text" class="form-control" name="density" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Dot Gain:</label>
+                    <label >Dot Gain:</label>
                     <input type="text" class="form-control" name="dotGain" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Print Contrast:</label>
+                    <label >Print Contrast:</label>
                     <input type="text" class="form-control" name="printContrast" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">G7:</label>
+                    <label >G7:</label>
                     <input type="text" class="form-control" name="G7" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Trap:</label>
+                    <label >Trap:</label>
                     <input type="text" class="form-control" name="trap" required>
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only">Geometry:</label>
+                    <label >Geometry:</label>
                     <input type="text" class="form-control" name="geometry" required>
                   </div>
 
 
                   <div class="form-group">
-                    <label class="sr-only">Illuminant:</label>
+                    <label >Illuminant:</label>
                     <input type="text" class="form-control" name="illuminant" required>
                   </div>
 
+
+
                   <div class="form-group">
-                    <label class="sr-only">Spin:</label>
-                    <input type="text" class="form-control" name="spin" required>
+                    <label>Spin:</label>
+                    <select name="spin" class="form-control" required>
+                          <option value="True">True</option>
+                          <option value="False">False</option>
+                    </select>
                   </div>
 
                   {% for i in rgbRange %}
 
                   <div class="form-group">
-                    <label class="sr-only">Rgb {{i}}:</label>
+                    <label >Rgb {{i}}:</label>
                     <input type="text" class="form-control" name="rgb{{i}}" required>
                   </div>
 
@@ -112,10 +124,10 @@
                   {% endfor %}
 
                   <div class="form-group">
-                    <label class="sr-only" name="active">Active:</label>
-                    <select class="form-control" required>
-                          <option value="True">Active<option>
-                          <option value="False">Inactive<option>
+                    <label>Active:</label>
+                    <select name="active" class="form-control" required>
+                          <option value="True">Active</option>
+                          <option value="False">Inactive</option>
                     </select>
                   </div>
 
