--- a/templates/app/role.html
+++ b/templates/app/role.html
@@ -17,7 +17,7 @@
                   <br>
                   <h4 style="color: red">{{message}}</h4>
                   <div class="form-group">
-                    <label class="sr-only">Role Name:</label>
+                    <label >Role Name:</label>
                     <input type="text" class="form-control" name="roleName" required>
                   </div>
 
