--- a/templates/app/patchTolerance.html
+++ b/templates/app/patchTolerance.html
@@ -16,6 +16,16 @@
                   <br>
                   <br>
                   <h4 style="color: red">{{message}}</h4>
+
+                  <div class="form-group">
+                    <label  >Brand Name:</label>
+                    <select name="brand" class="form-control" required>
+                      {%for each in brands %}
+                        <option value={{each.pk}}>{{each.name}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  
                   <div class="form-group">
                     <label >Name:</label>
                     <input type="text" class="form-control" name="name" required>
