--- a/templates/app/job.html
+++ b/templates/app/job.html
@@ -14,44 +14,40 @@
               <div>
 
                 <script>
-                  //used below for maitaining Color List count
+                  //used below for maitaining Color List coun
                   var colorCount=1;
+                  var brand = "";
+                  var patchStandards;
+                  var patchTolerances;
                 </script>
 
                 <script>
                   function report(value) {
+                    brand=value;
                     if (value=="") return; // please select - possibly you want something else here
                     else{
                       $.get("{%url "app:valuesFromBrand" %}", { "brand": value },
                           function(values){
                               console.log("values=", values);
                                $('#divisionOptions option').remove();
+
                                for(var count=0; count < values["divisions"].length; count++){
                                  //  console.log("values",divisions["divisions"][count]["id"] );
                                 $('#divisionOptions').append( new Option(values["divisions"][count]["name"],values["divisions"][count]["id"]) );
                                }
 
-
-                              // $('#brandColorOptions1 option').remove();
-                              // for(var count=0; count < values["patchStandards"].length; count++){
-                              // //  console.log("patchStandards",values["patchStandards"][count]["id"], values["patchStandards"][count]["name"] );
-                              //  $('#brandColorOptions1').append( new Option(values["patchStandards"][count]["name"],values["patchStandards"][count]["id"]) );
-                              // }
-                              //
-                              // $('#patchToleranceOptions1 option').remove();
-                              // for(var count=0; count < values["patchTolerances"].length; count++){
-                              //   //  console.log("patchTolerances",values["patchTolerances"][count]["id"], values["patchTolerances"][count]["name"] );
-                              //  $('#patchToleranceOptions1').append( new Option(values["patchTolerances"][count]["name"],values["patchTolerances"][count]["id"]) );
-                              // }
-
-
                               $('select[name^=brandColor] option').remove();
+                              patchStandards = values["patchStandards"];
+                              $('select[name^=brandColor]').append('<option disabled selected value> -- select an option -- </option>');
                               for(var count=0; count < values["patchStandards"].length; count++){
                               //  console.log("patchStandards",values["patchStandards"][count]["id"], values["patchStandards"][count]["name"] );
                                $('select[name^=brandColor]').append( new Option(values["patchStandards"][count]["name"],values["patchStandards"][count]["id"]) );
                               }
 
                               $('select[name^=patchTolerance] option').remove();
+                              patchTolerances = values["patchTolerances"];
+
+                              $('select[name^=patchTolerance]').append('<option disabled selected value> -- select an option -- </option>');
                               for(var count=0; count < values["patchTolerances"].length; count++){
                                 //  console.log("patchTolerances",values["patchTolerances"][count]["id"], values["patchTolerances"][count]["name"] );
                                $('select[name^=patchTolerance]').append( new Option(values["patchTolerances"][count]["name"],values["patchTolerances"][count]["id"]) );
@@ -73,6 +69,7 @@
 
                     <label>Brand Name:</label>
                     <select name="brand" class="form-control" onchange="report(this.value)">
+                      <option disabled selected value> -- select an option -- </option>
                       {%for each in brands %}
                         <option value={{each.pk}}>{{each.name}}</option>
                       {% endfor %}
@@ -92,7 +89,6 @@
                     <input type="text" class="form-control" name="jobsName" required>
                   </div>
 
-
                   <div class="form-group">
                     <table class="table table-striped">
                       <thead>
@@ -110,22 +106,36 @@
 
                       <script>
                         function fieldAdd() {
+
                           colorCount+=1;
                           $('#addTable').append(
                             `<tr>
                               <td><label  name='colorListLable`+colorCount+`'>Color List `+colorCount+`</label></td>
-                              <td><select id='brandColorOptions`+colorCount+`' name='brandColor`+colorCount+`' class='form-control'></select></td>
-                              <td><select id='patchToleranceOptions`+colorCount+`' name='patchTolerance`+colorCount+`' class='form-control'></select></td>
+                              <td><select required id='brandColorOptions`+colorCount+`' name='brandColor`+colorCount+`' class='form-control'></select></td>
+                              <td><select required id='patchToleranceOptions`+colorCount+`' name='patchTolerance`+colorCount+`' class='form-control'></select></td>
                               <td></td>
                             </tr>`
                           )
+                          $('select[name^=brandColor'+colorCount+']').append('<option disabled selected value> -- select an option -- </option>');
+                          for(var count=0; count < patchStandards.length; count++){
+                          //  console.log("patchStandards",patchStandards[count]["id"], patchStandards[count]["name"] );
+                           $('select[name^=brandColor'+colorCount+']').append( new Option(patchStandards[count]["name"],patchStandards[count]["id"]) );
+                          }
+
+                          $('select[name^=patchTolerance'+colorCount+']').append('<option disabled selected value> -- select an option -- </option>');
+                          for(var count=0; count < patchTolerances.length; count++){
+                            //  console.log("patchTolerances",patchTolerances[count]["id"], patchTolerances[count]["name"] );
+                           $('select[name^=patchTolerance'+colorCount+']').append( new Option(patchTolerances[count]["name"],patchTolerances[count]["id"]) );
+                          }
+
+
                         }
                       </script>
                       <script>
                       function fieldRemove() {
+
                         if(colorCount!=1){
                           colorCount-=1;
-                          console.log("here");
                           $('#addTable tr').last().remove()
                         }
                         return false;
@@ -137,8 +147,8 @@
                       <tbody id="addTable">
                         <tr>
                           <td><label  name="colorListLable1">Color List 1</label></td>
-                          <td><select id="brandColorOptions1" name="brandColor1" class="form-control"></select></td>
-                          <td><select id="patchToleranceOptions1" name="patchTolerance1" class="form-control"></select></td>
+                          <td><select required id="brandColorOptions1" name="brandColor1" class="form-control"></select></td>
+                          <td><select required id="patchToleranceOptions1" name="patchTolerance1" class="form-control"></select></td>
                           <td></td>
                         </tr>
 
