--- a/templates/header.html
+++ b/templates/header.html
@@ -31,7 +31,7 @@
                     <li><a href="#">Analytics</a></li>
                     <li><a href="#">Triggers</a></li>
                     <li><a href="#">Bookmarks</a></li>
-                    <li><a href="#">Downloads</a></li>
+                    <li><a href="#">Uploads</a></li>
                     <li><a href="#">Links</a></li>
                   </ul>
                 </li>
@@ -80,10 +80,10 @@
                 </li>
 
                 <li>
-                  <a class="tooltip-tip" href="#" title="Extra"> <i class="intial palette-Orange-700 bg ti-zip"></i> <span>Downloads</span> </a>
+                  <a class="tooltip-tip" href="#" title="Extra"> <i class="intial palette-Orange-700 bg ti-zip"></i> <span>Uploads</span> </a>
                   <ul>
-                    <li><a href="#">New Downloads</a></li>
-                    <li><a href="#">Show Downloads</a></li>
+                    <li><a href="{% url "app:upload" %}">New Upload</a></li>
+                    <li><a href="#">Show Uploads</a></li>
                     <li><a href="#">Show File Category</a></li>
                   </ul>
                 </li>
