--- a/templates/app/showUploads.html
+++ b/templates/app/showUploads.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %} {% load staticfiles %} {% block title %} Show Evaluations {% endblock title %} {% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block title %} Uploaded Files {% endblock title %} {% block content %}
 <div class="row" style="margin-top:-20px">
   <div class="large-12 columns">
     <div class="row">
       <div class="large-12 columns">
         <div class="box palette-Grey-300 bg">
           <div class="box-header  palette-Grey-300 bg">
-            <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;Show Evaluations</span></h3>
+            <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;Uploaded Files</span></h3>
             <div class="pull-right text-white box-tools">
               <span class="text-white box-btn"><i class="circle-nest-medium ti-notepad"></i>
               </span> &nbsp;&nbsp;&nbsp;
@@ -16,15 +16,19 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>Evaluation Names</th>
+                      <th>File Names</th>
+                      <th>Category Name</th>
+                      <th>View File</th>
                       <th>Edit</th>
                       <th>Delete</th>
                     </tr>
                   </thead>
                   <tbody>
-                    {% for each in evaluations %}
+                    {% for each in fileRepository %}
                       <tr>
-                        <td>{{each.name}}</td>
+                        <td>{{each.file_name}}</td>
+                        <td>{{each.fileCategory}}</td>
+                        <td><a target="_blank" href="{{each.fileUploaded.url}}">View <i class="fa fa-eye" aria-hidden="true"></i></a></td>
                         <td><button type="button" name="edit{{forloop.counter}}" class="btn">Edit <i class="fa fa-pencil" aria-hidden="true"></i></td></button>
                         <td><button type="button" name="delete{{forloop.counter}}" class="btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></td></button>
                       </tr>
