--- a/templates/index.html
+++ b/templates/index.html
@@ -2,66 +2,75 @@
 <div class="row" style="margin-top:-20px">
   <div class="large-6 columns">
     <div class="row">
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-tasks fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">JOBS/STATUS</h6>
+      <a href="{% url "app:showJobs"%}">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-tasks fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">JOBS/STATUS</h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-pie-chart fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Numerical Analysis</h6>
+      </a>
+      <a href="#">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-pie-chart fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Numerical Analysis</h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-area-chart fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Visual Analysis</h6>
+      </a>
+      <a href="#">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-area-chart fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Visual Analysis</h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-line-chart fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Analytics</h6>
+      </a>
+      <a href="#">
 
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-line-chart fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Analytics</h6>
+
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </a>
 
       <!-- <div class="large-6 columns">
         <div class="box palette-White bg">
@@ -86,67 +95,74 @@
 
   <div class="large-6 columns">
     <div class="row">
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Triggers</h6>
 
+      <a href="#">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Triggers</h6>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-bookmark fa-3x" aria-hidden="true"></i>
+      </a>
+      <a href="#">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-bookmark fa-3x" aria-hidden="true"></i>
 
-                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Bookmarks</h6>
+                    <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Bookmarks</h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white" >
-                <br>
-                <i class="fa fa-download fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Downloads</h6>
+      </a>
+      <a href="{%url "app:showUploads" %}">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white" >
+                  <br>
+                  <i class="fa fa-download fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Uploads</h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="large-6 columns">
-        <div class="box palette-White bg">
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white">
-                <br>
-                <i class="fa fa-link fa-3x" aria-hidden="true"></i>
-                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="50px" height="50px" > -->
-                <br><h6 class="text-white">Links</h6>
-
+      </a>
+      <a href="#">
+        <div class="large-6 columns">
+          <div class="box palette-White bg">
+            <div class="box-body no-pad" style="display: block;">
+              <div class="events-nest ">
+                <div class="wrap-no-pad text-white">
+                  <br>
+                  <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="50px" height="50px" > -->
+                  <br><h6 class="text-white">Links</h6>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 
