--- a/templates/app/editJob.html
+++ b/templates/app/editJob.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %} {% load staticfiles %} {% block title %} New Job {% endblock title %} {% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block title %} Edit Job {% endblock title %} {% block content %}
 <div class="row" style="margin-top:-20px">
   <div class="large-12 columns">
     <div class="row">
       <div class="large-12 columns">
         <div class="box palette-Grey-300 bg">
           <div class="box-header  palette-Grey-300 bg">
-            <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;NEW JOB</span></h3>
+            <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;Edit Job</span></h3>
             <div class="pull-right text-white box-tools">
               <span class="text-white box-btn"><i class="circle-nest-medium ti-notepad"></i>
               </span> &nbsp;&nbsp;&nbsp;
@@ -15,7 +15,7 @@
 
                 <script>
                   //used below for maitaining Color List coun
-                  var colorCount=1;
+                  var colorCount = 1;
                   var brand = "";
                   var patchStandards;
                   var patchTolerances;
@@ -23,43 +23,58 @@
 
                 <script>
                   function report(value) {
-                    brand=value;
-                    if (value=="") return; // please select - possibly you want something else here
-                    else{
-                      $.get("{%url "app:valuesFromBrand" %}", { "brand": value },
-                          function(values){
-                              console.log("values=", values);
-                               $('#divisionOptions option').remove();
-                               for(var count=0; count < values["divisions"].length; count++){
-                                 //  console.log("values",divisions["divisions"][count]["id"] );
-                                $('#divisionOptions').append( new Option(values["divisions"][count]["name"],values["divisions"][count]["id"]) );
-                               }
+                    brand = value;
+                    console.log("value=", value);
+                    if (value == "") return; // please select - possibly you want something else here
+                    else {
+                      $.get("{%url "app:valuesFromBrand" %}", {
+                          "brand": value
+                        },
+                        function(values) {
+                          divisions = {{divisions}}
+                          console.log("values=", values, " divisions=", divisions);
 
-                               $('#productOptions option').remove();
-                               for(var count=0; count < values["products"].length; count++){
-                                 //  console.log("values",divisions["divisions"][count]["id"] );
-                                $('#productOptions').append( new Option(values["products"][count]["name"],values["products"][count]["id"]) );
-                               }
+                          $('#divisionOptions option').remove();
+                          for (var count = 0; count < values["divisions"].length; count++) {
+                            if(divisions.indexOf(values["divisions"][count]["id"]) > -1){
+                              $('#divisionOptions').append('<option value=' + values["divisions"][count]["id"] + ' selected>' + values["divisions"][count]["name"] + '</option>');
+                            }
+                            else{
+                              $('#divisionOptions').append(new Option(values["divisions"][count]["name"], values["divisions"][count]["id"]));
+                            }
 
-                              $('select[name^=brandColor] option').remove();
-                              patchStandards = values["patchStandards"];
-                              $('select[name^=brandColor]').append('<option disabled selected value> -- select an option -- </option>');
-                              for(var count=0; count < values["patchStandards"].length; count++){
-                              //  console.log("patchStandards",values["patchStandards"][count]["id"], values["patchStandards"][count]["name"] );
-                               $('select[name^=brandColor]').append( new Option(values["patchStandards"][count]["name"],values["patchStandards"][count]["id"]) );
-                              }
+                          }
 
-                              $('select[name^=patchTolerance] option').remove();
-                              patchTolerances = values["patchTolerances"];
+                          $('#productOptions option').remove();
+                          for (var count = 0; count < values["products"].length; count++) {
+                            var id = (values["products"][count]["id"]).toString();
+                            if (id.localeCompare("{{job.product.id}}") == 0) {
+                              $('#productOptions').append('<option value=' + values["products"][count]["id"] + ' selected>' + values["products"][count]["name"] + '</option>')
+                            }
+                            else {
+                              $('#productOptions').append(new Option(values["products"][count]["name"], values["products"][count]["id"]));
+                            }
+                          }
 
-                              $('select[name^=patchTolerance]').append('<option disabled selected value> -- select an option -- </option>');
-                              for(var count=0; count < values["patchTolerances"].length; count++){
-                                //  console.log("patchTolerances",values["patchTolerances"][count]["id"], values["patchTolerances"][count]["name"] );
-                               $('select[name^=patchTolerance]').append( new Option(values["patchTolerances"][count]["name"],values["patchTolerances"][count]["id"]) );
-                              }
+                          $('select[name^=brandColor] option').remove();
+                          patchStandards = values["patchStandards"];
+                          $('select[name^=brandColor]').append('<option disabled selected value> -- select an option -- </option>');
+                          for (var count = 0; count < values["patchStandards"].length; count++) {
+                            //  console.log("patchStandards",values["patchStandards"][count]["id"], values["patchStandards"][count]["name"] );
+                            $('select[name^=brandColor]').append(new Option(values["patchStandards"][count]["name"], values["patchStandards"][count]["id"]));
+                          }
 
-                      }).fail(function(){
-                          console.log("error");
+                          $('select[name^=patchTolerance] option').remove();
+                          patchTolerances = values["patchTolerances"];
+
+                          $('select[name^=patchTolerance]').append('<option disabled selected value> -- select an option -- </option>');
+                          for (var count = 0; count < values["patchTolerances"].length; count++) {
+                            //  console.log("patchTolerances",values["patchTolerances"][count]["id"], values["patchTolerances"][count]["name"] );
+                            $('select[name^=patchTolerance]').append(new Option(values["patchTolerances"][count]["name"], values["patchTolerances"][count]["id"]));
+                          }
+
+                        }).fail(function() {
+                        console.log("error");
                       });
                     }
                   }
@@ -74,9 +89,12 @@
 
                     <label>Brand Name:</label>
                     <select name="brand" class="form-control" onchange="report(this.value)">
-                      <option disabled selected value> -- select an option -- </option>
                       {%for each in brands %}
-                        <option value={{each.pk}}>{{each.name}}</option>
+                          {% if each.id == job.brand.id %}
+                            <option value={{each.pk}} selected>{{each.name}}</option>
+                          {% else %}
+                            <option value={{each.pk}}>{{each.name}}</option>
+                          {% endif %}
                       {% endfor %}
                     </select>
                   </div>
@@ -84,7 +102,7 @@
                   <div class="form-group">
                     <label>Product Name:</label>
                     <select id="productOptions" name="product"  class="form-control" required>
-                      <option disabled selected value> -- select an option -- </option>
+                      {# <option disabled selected value> -- select an option -- </option>#}
                     </select>
                   </div>
 
@@ -96,7 +114,7 @@
 
                   <div class="form-group">
                     <label >Job Name:</label>
-                    <input type="text" class="form-control" name="jobName" required>
+                    <input type="text" class="form-control" name="jobName" value="{{job.name}}"required>
                   </div>
 
                   <div class="form-group">
@@ -167,7 +185,6 @@
                           </td>
                           <td></td>
                         </tr>
-
                       </tbody>
                     </table>
 
@@ -180,8 +197,13 @@
 
                     <label>Active:</label>
                     <select name="active" class="form-control" required>
-                          <option value="True">Active</option>
-                          <option value="False">Inactive</option>
+                      {% if job.active == 1 %}
+                        <option selected value="True">Active</option>
+                        <option value="False">Inactive</option>
+                      {% else %}
+                      <option value="True">Active</option>
+                      <option selected value="False">Inactive</option>
+                      {% endif %}
                     </select>
                   </div>
 
@@ -193,6 +215,12 @@
                   <br>
                 </form>
               </div>
+              <script type='text/javascript' src="{% static "js/jquery.js" %}"></script>
+              <script type="text/javascript">
+                $( document ).ready(function(){
+                  report({{job.brand.id}});
+                });
+              </script>
             </div>
           </div>
         </div>
