--- a/templates/app/showJobs.html
+++ b/templates/app/showJobs.html
@@ -62,6 +62,9 @@
                       if(text.localeCompare("Edit Jobs")==0){
                         location.href = "/editJob/"+value;
                       }
+                      else if(text.localeCompare("Delete Job")==0){
+                        location.href = "/deleteJob/"+value;
+                      }
 
 
                     }
